--- a/src/App.css
+++ b/src/App.css
@@ -20,3 +20,15 @@
     padding-right: 8%;
     font-size: 5.0rem;
   }
+.specialButt{
+    margin: 30px;
+    width: 75px;
+    height:75px;
+    border-radius: 50px;
+    background:#2160b0;
+    color: white;
+    font-size: 35px; 
+    border: 1px solid #420108;
+    border-bottom: 3px solid #420108;
+    
+}
